--- a/doc/manual/entities.tex
+++ b/doc/manual/entities.tex
@@ -1,8 +1,5 @@
 \chapter{Main Entities} \label{chap:entities}
 
- \NOTE{This description has not been updated for ViennaGrid 1.1.0 yet!}
- 
-
 In the following, the main entities of ViennaGrid are explained. The nomenclature essentially follows the convention from topology and can partly be found in other mesh libraries. Note that the purpose of this manual is not to give exact definitions from the field of geometry or topology, but rather to establish the link between abstract concepts and their representation in code within {\ViennaGrid}. First, geometrical objects are discussed, then topological objects and finally complexes of topological objects.
 
 \begin{figure}[tb]
@@ -103,6 +100,32 @@ Boundary elements are elements which represent a boundary of another element. Fo
 
 A brief overview of the corresponding meanings of vertices, edges, facets and cells is given in Tab.~\ref{tab:vertex-edge-facet-cell}. Note that edges have higher topological dimension than facets in the one-dimensional case, while they coincide in two dimensions. Refer also to Fig.~\ref{fig:entities}.
 
+{\ViennaGrid} supports 3 kinds of element types: simplices, hypercubes and special elements. Theoretically, simplices and hypercube with arbitrary dimension are supported but they are not explicitly defined. Special elements are polygons and piecewise linear complexes (PLCs). Each element type can be identified with its own tag. Tab.~\ref{tab:element-type-and-tags} gives an overview of all supported element types and their tags.
+
+\begin{table}[b]
+ \centering 
+ \renewcommand{\arraystretch}{1.3}
+\begin{tabular}{|l|r|l|l|}
+\hline
+          & Dimension & Generic Tag & Element Tag \\
+\hline
+ \textbf{Simplex}   & $n$ & \lstinline|simplex_tag<n>| & \lstinline|simplex_tag<n>| \\
+ \textbf{Hypercube}   & $n$ & \lstinline|hypercube_tag<n>| & \lstinline|hypercube_tag<n>| \\
+ \textbf{Vertex}   & $0$  & \lstinline|simplex_tag<0>|  & \lstinline|vertex_tag| \\
+ \textbf{Line} or \textbf{Edge}   & $1$  & \lstinline|simplex_tag<1>|  & \lstinline|line_tag|, \lstinline|edge_tag| \\
+ \textbf{Triangle}   & $2$  & \lstinline|simplex_tag<2>|  & \lstinline|triangle_tag| \\
+ \textbf{Tetrahedron}   & $3$  & \lstinline|simplex_tag<3>|  & \lstinline|tetrahedron_tag| \\
+ \textbf{Quadrilateral}   & $2$  & \lstinline|hypercube_tag<2>|  & \lstinline|quadrilateral_tag| \\
+ \textbf{Hexahedron}   & $3$  & \lstinline|hypercube_tag<3>|  & \lstinline|hexahedron_tag| \\
+ \textbf{Polygon}   & $2$  & \lstinline|polygon_tag|  & \lstinline|polygon_tag| \\
+ \textbf{PLC}   & $2$  & \lstinline|plc_tag|  & \lstinline|plc_tag| \\
+\hline
+\end{tabular}
+\caption{Element types and their tags}
+\label{tab:element-type-and-tags}
+\end{table}
+
+
 % For a parametric description of these objects it is more appropriate to switch \textbf{$n$-cells}, which are objects of topological dimension $n$. The terms \emph{vertex}, \emph{edge}, \emph{facet} and \emph{cell} thus refer to $0$-cell, $1$-cell, $N-1$-cell and $N$-cell respectively. The maximum topological dimension $N$ is in {\ViennaGrid} considered to be a parameter available at compile time, which allows to pick the correct $n$-cell type for the algorithms provided. Note that one can still use a run time dispatch at the cost of increased compilation times if the dimension of the domain is only available at run time. More details can be found in Chapters \ref{chap:iterators} and \ref{chap:algorithms}.
 
 
@@ -144,5 +167,3 @@ The instantiation of a {\ViennaGrid} domain object requires a configuration clas
 A \emph{segment} $\Omega_i$ refers to a subset of the elements in a domain $\Omega$. Unlike a domain, a segment is not a container for its elements. Instead, only references (pointers) to the elements in the domain are stored. In common C++ language, a \emph{segment} represents a so-called \emph{view} on the domain.
 
 A segmentation represents a collection of segments. The typical use-case for a segmentation is the decomposition of the domain into pieces of a common property. For example, a solid consisting of different materials can be set up in {\ViennaGrid} such that each regions of the same material are represented in a common segment.
-
-
