--- a/doc/manual/io.tex
+++ b/doc/manual/io.tex
@@ -32,7 +32,7 @@ A different approach is to convert other file formats to one of the formats deta
  To read a mesh from a \texttt{.mesh} file with name \lstinline|filename| to a \lstinline|domain|, the lines
  \begin{lstlisting}
  viennagrid::io::netgen_reader my_netgen_reader;
- my_netgen_reader(domain, filename);
+ my_netgen_reader(domain, segmentation, filename);
  \end{lstlisting}
  should be used. Note that the reader might throw an \lstinline|std::exception| if the file cannot be opened or if there is a parser error.
 
@@ -57,10 +57,10 @@ A different approach is to convert other file formats to one of the formats deta
  The VTK file format is extensively documented \cite{VTKfileformat} and allows to store mesh quantities as well.
  The simplest way of reading a VTK file \lstinline|my_mesh.vtu| is similar to the \texttt{Netgen} reader:
  \begin{lstlisting}
- viennagrid::io::vtk_reader<DomainType>  my_vtk_reader;
- my_vtk_reader(domain, "my_mesh.vtu");
+ viennagrid::io::vtk_reader<DomainType, SegmentationType>  my_vtk_reader;
+ my_vtk_reader(domain, segmentation, "my_mesh.vtu");
  \end{lstlisting}
- Note that the domain type is required as template argument for the reader class.
+ Note that the domain type is required as template argument for the reader class, the segmentation type is optional. By default \lstinline|result_of::segmentation<DomainType>::type| is used.
 
  {\ViennaGrid} supports single-segmented \lstinline|.vtu| files consisting of one \lstinline|<piece>|.
  and always reads a single-segmented mesh to its first segment. If a segment does not already exist on the domain, one is created.
@@ -69,16 +69,35 @@ A different approach is to convert other file formats to one of the formats deta
 
 
  The VTK format allows to store scalar-valued and vector-valued data sets, which are identified by their names, on vertices and cells.
- These data sets are directly transferred to the {\ViennaGrid} domain using {\ViennaData} as described in Chapter \ref{chap:data}.
+ These data sets are directly transferred to the {\ViennaGrid} domain using accessor as described in Chapter \ref{chap:data}.
  By default, data is stored using the data name string as key of type \lstinline|std::string|.
  Scalar-valued data is stored as \lstinline|double|, while vector-valued data is stored as \lstinline|std::vector<double>|.
- For example, a scalar quantity \texttt{potential} on a vertex \lstinline|v| can be accessed and further manipulated using
- \begin{lstlisting}
-  viennadata::access<std::string, double>("potential")(v)
- \end{lstlisting}
+%  For example, a scalar quantity \texttt{potential} on a vertex \lstinline|v| can be accessed and further manipulated using
+%  \begin{lstlisting}
+%   viennadata::access<std::string, double>("potential")(v)
+%  \end{lstlisting}
 
- For efficiency reasons, one may want to have data stored using either a different key, key type or data type.
- This can be achieved using the following free functions in Tab.~\ref{tab:customizing-io} to set up the reader object accordingly.
+%  For efficiency reasons, one may want to have data stored using either a different key, key type or data type.
+%  This can be achieved using the following free functions in Tab.~\ref{tab:customizing-io} to set up the reader object accordingly.
+
+There are two ways to obtain the data stored on vertices and cells: query the data after import or register an accessor/field before import.
+Registering an accessor/field with an import is simply done by using the function \lstinline|add_*_data_on_*|, see Tab.~\ref{tab:customizing-io}
+
+ \begin{lstlisting}
+ std::vector<double> scalar_values;
+ viennagrid::result_of::field< std::vector<double>, VertexType >::type scalar_values_field;
+ 
+ std::vector< std::vector<double> > vector_values;
+ viennagrid::result_of::field< std::vector< std::vector<double> >, CellType >::type vector_values_field;
+ 
+ viennagrid::io::vtk_reader<DomainType>      my_vtk_reader;
+ viennagrid::io::add_scalar_data_on_vertices(my_vtk_reader, scalar_values_field, "potential");
+ viennagrid::io::add_vector_data_on_cells(my_vtk_reader, vector_values_field, "potential_vector_field");
+ 
+ my_vtk_reader(domain, segmentation, "my_mesh.vtu");
+ \end{lstlisting}
+ 
+ 
 
  \begin{table}[tb]
  \begin{center}
@@ -88,21 +107,16 @@ A different approach is to convert other file formats to one of the formats deta
    \hline
    \lstinline|add_scalar_data_on_vertices| & scalar-valued, vertex-based \\
    \lstinline|add_vector_data_on_vertices| & vector-valued, vertex-based \\
-   \lstinline|add_normal_data_on_vertices| & vector-valued, vertex-based \\
    \hline
    \lstinline|add_scalar_data_on_cells| & scalar-valued, cell-based \\
    \lstinline|add_vector_data_on_cells| & vector-valued, cell-based \\
-   \lstinline|add_normal_data_on_cells| & vector-valued, cell-based \\
    \hline
   \end{tabular}
  \end{center}
- \caption{Free functions in namespace \lstinline|viennagrid::io| for customizing reader and writer objects. Note that \lstinline|normal|-data refers to \lstinline|vector|-data that is normalized to unit length. The three parameters to each of these functions is the reader object, the {\ViennaData} key and the VTK data name.}
+ \caption{Free functions in namespace \lstinline|viennagrid::io| for customizing reader and writer objects. The three parameters to each of these functions is the reader object, the accessor/field and the VTK data name.}
  \label{tab:customizing-io}
  \end{table}
  
-
-
-
  A list of all names identifying data read from the file can be obtained the functions
  \begin{center}
   \begin{tabular}{|l|l|}
@@ -117,16 +131,7 @@ A different approach is to convert other file formats to one of the formats deta
    \hline
   \end{tabular}
  \end{center}
-  For example, to store scalar-valued vertex-data with name \texttt{potential} in a VTK file with name \lstinline|"my_mesh.vtu"| to the domain using a key \lstinline|42| of type \lstinline|long|, and process all other data in the default way, the reader has to be invoked as:
- \begin{lstlisting}
- viennagrid::io::vtk_reader<DomainType>      my_vtk_reader;
- viennagrid::io::add_scalar_data_on_vertices<long,          // key type
-                                             double>        // data type
-                                            (my_vtk_reader, // reader
-                                             42,            // key
-                                             "potential");  // VTK name
- my_vtk_reader(domain, "my_mesh.vtu");
- \end{lstlisting}
+
  The list of all scalar vertex data sets read is then printed together with the respective segment index as
  \begin{lstlisting}
 using namespace viennagrid::io;
@@ -136,7 +141,35 @@ for (size_t i=0; i<get_scalar_data_on_vertices(reader).size(); ++i)
             << get_scalar_data_on_vertices(reader)[i].second << std::endl;
  \end{lstlisting}
  
-
+  
+ 
+ \begin{table}[tb]
+ \begin{center}
+  \begin{tabular}{|l|l|}
+   \hline
+   Function name & Data description \\
+   \hline
+   \lstinline|vertex_scalar_field| & scalar-valued, vertex-based \\
+   \lstinline|vertex_vector_field| & vector-valued, vertex-based \\
+   \hline
+   \lstinline|cell_scalar_field| & scalar-valued, cell-based \\
+   \lstinline|cell_vector_field| & vector-valued, cell-based \\
+   \hline
+  \end{tabular}
+ \end{center}
+ \caption{Free functions in namespace \lstinline|viennagrid::io| for customizing reader and writer objects. The three parameters to each of these functions is the reader object, the accessor/field and the VTK data name.}
+ \label{tab:io-field-obtaining}
+ \end{table}
+ 
+ After the import process a scalar/vector data field can be obtained with the member functions described in table Tab.~\ref{tab:io-field-obtaining}. In the next example a scalar field is obtained for the data values with VTK name \texttt{potential} and for the segment with ID $42$.
+ 
+ \begin{lstlisting}
+  viennagrid::result_of::field<std::vector<double>, VertexType> scalar_field =
+    my_vtk_reader.cell_scalar_field( "potential", 42 );
+ \end{lstlisting}
+ 
+ 
+ 
 \section{Writers}
 Since {\ViennaGrid} does not provide any visualization capabilities, the recommended procedure for visualization is 
 to write to one of the file formats discussed below and use one of the free visualization suites for that purpose.
@@ -145,7 +178,7 @@ to write to one of the file formats discussed below and use one of the free visu
 
  \subsection{OpenDX}
  {\OpenDX} \cite{opendx} is an open source visualization software package based on IBM's Visualization Data Explorer.
- The writer supports either one vertex-based or one cell-based scalar quantity to be written to an {\OpenDX} file.
+ The writer supports either one vertex-based or one cell-based scalar quantity to be written to an {\OpenDX} file. OpenDX writer does not support segmentations.
 
  The simplest way to write a \lstinline|domain| of type \lstinline|DomainType| to a file \lstinline|"my_mesh.out"| is
  \begin{lstlisting}
@@ -153,15 +186,13 @@ to write to one of the file formats discussed below and use one of the free visu
   my_dx_writer(domain, "my_mesh.out");
  \end{lstlisting}
  To write quantities stored on the domain, the free functions from Tab.~\ref{tab:customizing-io} are used.
- For example, to visualize a scalar vertex-quantity of type \lstinline|double| stored on the domain using a key \lstinline|"potential"| of type \lstinline|std::string| (cf.~Chapter \ref{chap:data}), the previous snippet is modified to
+ For example, to visualize a scalar vertex-quantity of type \lstinline|double| stored in an accessor (cf.~Chapter \ref{chap:data}), the previous snippet is modified to
  \begin{lstlisting}
  using viennagrid::io;
  opendx_writer<DomainType> my_dx_writer;
- add_scalar_data_on_vertices<std::string,  // key type
-                             double>       // data type
-                            (my_dx_writer, // writer
-                             "potential",  // key
-                             "some_name"); // ignored
+ add_scalar_data_on_vertices(my_dx_writer,    // writer
+                             value_accessor,  // some accessor
+                             "some_name");    // ignored
  my_dx_writer(domain, "my_mesh.out");
  \end{lstlisting}
  Note that the data name provided as third argument is ignored for the {\OpenDX} writer.
@@ -172,56 +203,48 @@ to write to one of the file formats discussed below and use one of the free visu
  A number of free visualization tools such as Paraview \cite{paraview} are available for the visualization of VTK files.
  The simplest way of writing to a VTK file is 
  \begin{lstlisting}
+  viennagrid::io::vtk_writer<DomainType, SegmentationType> my_vtk_writer;
+  my_vtk_writer(domain, segmentation, "outfile");
+ \end{lstlisting}
+ Each segment is written to a separate file, leading to \lstinline|"outfile_0.vtu"|, \lstinline|"outfile_1.vtu"|, etc. In addition,
+ a Paraview data file \lstinline|"outfile_main.pvd"| is written, which links all the segments and should thus be used for visualization.
+ 
+ If no segmentation is given, the file \lstinline|"outfile.vtu"| is written using the following code example
+ \begin{lstlisting}
   viennagrid::io::vtk_writer<DomainType> my_vtk_writer;
   my_vtk_writer(domain, "outfile");
  \end{lstlisting}
- If the domain does not contain segments, the file \lstinline|"outfile.vtu"| is written. If there are segments in the domain,
- each segment is written to a separate file, leading to \lstinline|"outfile_0.vtu"|, \lstinline|"outfile_1.vtu"|, etc. In addition,
- a Paraview data file \lstinline|"outfile_main.pvd"| is written, which links all the segments and should thus be used for visualization.
 
  To write quantities stored on the domain to the VTK file(s), the free functions from Tab.~\ref{tab:customizing-io} are used.
- For example, to visualize a vector-valued cell-quantity of type \lstinline|std::vector<double>| stored on the domain using a key \lstinline|"stress"| of type \lstinline|std::string| (cf.~Chapter \ref{chap:data}), the previous snippet is modified to
+ For example, to visualize a vector-valued cell-quantity of type \lstinline|std::vector<double>| stored in an accessor (cf.~Chapter \ref{chap:data}), the previous snippet is modified to
  \begin{lstlisting}
  using viennagrid::io;
  vtk_writer<DomainType> my_vtk_writer;
- add_scalar_data_on_vertices<std::string,          // key type
-                             std::vector<double> > // data type
-                            (my_vtk_writer,        // writer
-                             "stress",             // key
+ add_vector_data_on_vertices(my_vtk_writer,        // writer
+                             value_accessor,       // some accessor
                              "vtk_name");          // VTK name
   my_vtk_writer(domain, "outfile");
  \end{lstlisting}
  In this way, the quantity is written to all segments and values at the interface coincide.
 
- If discontinuities at the interfaces should be allowed, vertex data may also be written per segment.
- This can be achieved using the free functions
- \begin{center}
-  \begin{tabular}{|l|l|}
-   \hline
-   Function name & Data description \\
-   \hline
-   \lstinline|add_scalar_data_on_vertices_per_segment| & scalar-valued, vertex-based \\
-   \lstinline|add_vector_data_on_vertices_per_segment| & vector-valued, vertex-based \\
-   \lstinline|add_normal_data_on_vertices_per_segment| & vector-valued, vertex-based \\
-   \hline
-  \end{tabular}
- \end{center}
- in namespace \lstinline|viennagrid::io|,
- which work in the same way as the free functions in Tab.~\ref{tab:customizing-io}.
- The data type needs to provide \lstinline|operator[]|, where the argument is the segment index.
+ If discontinuities at the interfaces should be allowed, vertex or cell data may also be written per segment.
  
- As closing example, a quantity \lstinline|"jump"| with type \lstinline|double| is stored on the vertices
- using the {\ViennaData} data type \lstinline|std::map<std::size_t, double>|. 
+ As closing example, a quantity \lstinline|"jump"| with type \lstinline|double| is stored in an accessor.
  For a vertex \lstinline|v| at the interface of segments with indices $0$ and $1$, the values \lstinline|1.0| for the segment with index $1$ and \lstinline|2.0| for the segment with index $2$ are stored:
  \begin{lstlisting}
-  typedef std::map<std::size_t, double>  DataType;
-  viennadata::access<std::string, DataType>("jump")(v)[0] = 1.0;   // seg0
-  viennadata::access<std::string, DataType>("jump")(v)[1] = 2.0;   // seg1
+  std::vector<double> segment_0_values;
+  std::vector<double> segment_1_values;
+  
+  viennagrid::result_of::field<std::vector<double>, VertexType>::type segment_0_values_accessor(segment_0_values);
+  viennagrid::result_of::field<std::vector<double>, VertexType>::type segment_1_values_accessor(segment_1_values);
+ 
+  segment_0_values_accessor(v) = 1.0;
+  segment_1_values_accessor(v) = 2.0;
  \end{lstlisting}
  The quantity is added to the VTK writer as
  \begin{lstlisting}
-add_scalar_data_on_vertices_per_segment<std::string, DataType>
-                                   (my_vtk_writer, "jump", "segment_data");
+  add_scalar_data_on_vertices(my_vtk_writer, segment_0, segment_0_values, "segment_data");
+  add_scalar_data_on_vertices(my_vtk_writer, segment_1, segment_1_values, "segment_data");
  \end{lstlisting}
 
 \TIP{A tutorial code using a VTK writer for discontinuous data at segment boundaries can be found in \texttt{examples/tutorial/multi-segment.cpp}.}
