--- a/doc/manual/viennagrid.tex
+++ b/doc/manual/viennagrid.tex
@@ -91,18 +91,19 @@
 \clearpage
 \pagenumbering{arabic}
 
-\include{introduction} %DONE
-\include{installation} %DONE
-\include{entities}     %DONE
-\include{domainconfig} %DONE
-\include{domainsetup}  %DONE
-\include{iterators}    %DONE
-\include{data}         %DONE
-\include{algorithms}   %DONE
-\include{io}           %DONE
+\include{introduction}  %DONE
+\include{installation}  %DONE
+\include{entities}      %DONE
+% \include{domainconfig} %DONE
+\include{typebasics}    %DONE
+\include{domainsetup}   %DONE
+\include{iterators}     %DONE
+\include{data}          %DONE
+\include{algorithms}    %DONE
+\include{io}            %DONE
 %\include{benchmarks}  %Will be added in some later release. A single day has 24 hours only ;-)
-\include{internals}    %DONE
-\include{design-decisions} %DONE
+\include{internals}     %DONE
+\include{design-decisions}  %DONE
 
 \appendix
 
